# ds-flights-etl

./: .dockerignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  __main__.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
dsflightsdpr/: airport.py  client.py  flight.py  processor.py  repository.py  setttings.py  tz_convert.py
dsflightsetl/: __init__.py  airport.py  args.py  client.py  flight.py  message.py  processor.py  repository.py  setttings.py  tz_convert.py
scripts/: simulator.py
tests/: conftest.py  test_airport.py  test_flight.py  test_tz_convert.py
tests/fixtures/: airport.csv  airport_minimal.csv  extracted_airports.csv  flight_sample_minimal.json  flights_sample.json
